base layout header and main blocks

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,115 @@
 
 <body>
     <div class="container">
-        ssfsdfsdfsdfsdfsd
+        <header class="header" id="header">
+            <div class="top-bar page-section">
+                <div class="wrapper">
+                    <ul class="top-bar-menu">
+                        <li class="top-bar-menu__item">
+                            <a href="#" class="top-bar-menu__link">Войти</a>
+                        </li>
+                        <li class="top-bar-menu__item">
+                            <a href="#" class="top-bar-menu__link">Регистрация</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bar page-section">
+                <div class="bar__search search">
+                    <span class="search__show-all">Все</span>
+                    <input type="text" placeholder="Искать" class="search__input">
+                    <span class="search__btn">О</span>
+                </div>
+                <div class="logo">
+                    LOGO
+                </div>
+                <div class="bar__cart cart">
+                    <span class="cart__text">Товаров 0 (0.00$)</span>
+                    <span class="cart__btn">О</span>
+                </div>
+            </div>
+            <nav class="navbar">
+                <ul class="main-menu">
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Home</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Some cool Меню</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">even better Меню</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Доставка Обедов</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Кофе Брейк</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Статьи</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="slider">
+            <div class="slide">
+                <div class="slide__text">
+                    <p class="slide__title">Дом обедов</p>
+                    <p class="slide__sub-title">Нам 15 лет</p>
+                </div>
+                <img class="slide__img" src="/img/slider-bg.jpg" alt="slide">
+            </div>
+        </div>
+
+        <div class="banners">
+            <div class="banners__item banner">
+                <img src="/img/banner-1.jpg" alt="" class="banner__img">
+                <span class="banner__btn inline-btn">Перейти в меню &rarr;</span>
+            </div>
+            <div class="banners__item banner">
+                <img src="/img/banner-2.jpg" alt="" class="banner__img">
+                <span class="banner__btn inline-btn">Перейти в меню &rarr;</span>
+            </div>
+            <div class="banners__item banner">
+                <img src="/img/banner-3.jpg" alt="" class="banner__img">
+                <span class="banner__btn inline-btn">Перейти в меню &rarr;</span>
+            </div>
+            <div class="banners__item banner">
+                <img src="/img/banner-4.jpg" alt="" class="banner__img">
+                <span class="banner__btn inline-btn">Перейти в меню &rarr;</span>
+            </div>
+        </div>
+
+        <div class="top-products page-section">
+            <div class="wrapper">
+                <ul class="tabs">
+                    <li class="tabs__item tabs__item--active">Фуршетные наборы</li>
+                    <li class="tabs__item">Топ продаж</li>
+                    <li class="tabs__item">Лучшее</li>
+                </ul>
+                <div class="cards">
+                    <div class="card">
+                        <div class="card__photo">
+                            <img class="card__img" src="/img/product-1.jpg" alt="product 1">
+                        </div>
+                    </div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
 
 </body>
