--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card" id="card-2"></div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
