--- a/src/index.html
+++ b/src/index.html
@@ -405,6 +405,24 @@
             </div>
         </div>
 
+        <div class="modal modal--visible1">
+            <div class="modal__inner">
+                <div class="modal__header">
+                    <div class="wrapper">
+                        <h3 class="modal__title page-section">modal title</h3>
+                    </div>
+
+                    <span class="modal__close"></span>
+                </div>
+
+                <div class="modal__content page-section">
+                    <div class="wrapper">
+                        s
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer class="footer page-section" id="footer">
             <p class="footer__privacy">
                 © 2020, Дом обедов, все права защищены
