added SVG icons

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,20 @@
                 <div class="wrapper">
                     <ul class="top-bar-menu">
                         <li class="top-bar-menu__item">
-                            <a href="#" class="top-bar-menu__link">Войти</a>
+                            <a href="#" class="top-bar-menu__link">
+                                <svg class="top-bar-menu__icon">
+                                    <use xlink:href="img/sprite.svg#icon-enter"></use>
+                                </svg>  
+                                Войти
+                            </a>
                         </li>
                         <li class="top-bar-menu__item">
-                            <a href="#" class="top-bar-menu__link">Регистрация</a>
+                            <a href="#" class="top-bar-menu__link">
+                                <svg class="top-bar-menu__icon">
+                                    <use xlink:href="img/sprite.svg#icon-add-user"></use>
+                                </svg> 
+                                Регистрация
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -30,35 +40,69 @@
                 <div class="bar__search search">
                     <span class="search__show-all">Все</span>
                     <input type="text" placeholder="Искать" class="search__input">
-                    <span class="search__btn">О</span>
+                    <span class="search__btn">
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-search"></use>
+                        </svg>
+                    </span>
                 </div>
                 <div class="logo">
                     LOGO
                 </div>
                 <div class="bar__cart cart">
                     <span class="cart__text">Товаров 0 (0.00$)</span>
-                    <span class="cart__btn">О</span>
+                    <span class="cart__btn">
+                        <svg class="cart__icon">
+                            <use xlink:href="img/sprite.svg#icon-shopping-cart"></use>
+                        </svg>
+                    </span>
                 </div>
             </div>
             <nav class="navbar">
                 <ul class="main-menu">
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Home</a>
+                        <a href="#" class="main-menu__link">
+                            <svg class="main-menu__icon main-menu__icon-home">
+                                <use xlink:href="img/sprite.svg#icon-home"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Some cool Меню</a>
+                        <a href="#" class="main-menu__link">
+                            <svg class="main-menu__icon">
+                                <use xlink:href="img/sprite.svg#icon-spoon-knife"></use>
+                            </svg>
+                            Some cool Меню
+                        </a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">even better Меню</a>
+                        <a href="#" class="main-menu__link">
+                            <svg class="main-menu__icon">
+                                <use xlink:href="img/sprite.svg#icon-man"></use>
+                            </svg>
+                            even better Меню
+                        </a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Доставка Обедов</a>
+                        <a href="#" class="main-menu__link">
+                            <svg class="main-menu__icon">
+                                <use xlink:href="img/sprite.svg#icon-truck"></use>
+                            </svg>
+                            Доставка Обедов
+                        </a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Кофе Брейк</a>
+                        <a href="#" class="main-menu__link">
+                            <svg class="main-menu__icon">
+                                <use xlink:href="img/sprite.svg#icon-cup"></use>
+                            </svg>
+                            Кофе Брейк
+                        </a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Статьи</a>
+                        <a href="#" class="main-menu__link">
+                            Статьи
+                        </a>
                     </li>
                 </ul>
             </nav>
@@ -417,7 +461,7 @@
 
                 <div class="modal__content page-section">
                     <div class="wrapper">
-                        s
+                        
                     </div>
                 </div>
             </div>
