added media queries to all blocks

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,11 @@
                         </svg>
                     </span>
                 </div>
+                <div class="search__btn--mobile">
+                    <svg class="search__icon">
+                        <use xlink:href="img/sprite.svg#icon-menu"></use>
+                    </svg>
+                </div>
                 <div class="logo">
                     LOGO
                 </div>
@@ -56,6 +61,11 @@
                             <use xlink:href="img/sprite.svg#icon-shopping-cart"></use>
                         </svg>
                     </span>
+                </div>
+                <div class="cart--mobile">
+                    <svg class="cart__icon">
+                        <use xlink:href="img/sprite.svg#icon-shopping-cart"></use>
+                    </svg>
                 </div>
             </div>
             <nav class="navbar">
@@ -106,6 +116,18 @@
                     </li>
                 </ul>
             </nav>
+
+            <div class="wrapper">
+                <div class="search search--mobile">
+                    <span class="search__show-all">Все</span>
+                    <input type="text" placeholder="Искать" class="search__input">
+                    <span class="search__btn">
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-search"></use>
+                        </svg>
+                    </span>
+                </div>
+            </div>
         </header>
 
         <div class="slider">
@@ -467,7 +489,7 @@
             </div>
         </div>
 
-        <footer class="footer page-section" id="footer">
+        <footer class="footer" id="footer">
             <p class="footer__privacy">
                 © 2020, Дом обедов, все права защищены
             </p>
