--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,35 @@
             </div>
         </header>
 
+        <div class="page">
+            <div class="page__header">
+                <div class="wrapper">
+                    <h2 class="page__title">Корзина покупок</h2>
+
+                    <div class="breadcrumbs">
+                        <ul class="breadcrumbs__list">
+                            <li class="breadcrumbs__item">
+                                <a href="#" class="breadcrumbs__link">
+                                    <svg class="breadcrumbs__icon breadcrumbs__icon-home">
+                                        <use xlink:href="img/sprite.svg#icon-home"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="breadcrumbs__item">
+                                <a href="#" class="breadcrumbs__link">
+                                    Корзина покупок
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="wrapper">
+
+            </div>
+        </div>
+<!-- 
         <div class="slider">
             <div class="slide">
                 <div class="slide__text">
@@ -487,7 +516,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <footer class="footer" id="footer">
             <p class="footer__privacy">
@@ -500,7 +529,11 @@
                 <div class="footer__search search">
                     <span class="search__show-all">Все</span>
                     <input type="text" placeholder="Искать" class="search__input">
-                    <span class="search__btn">О</span>
+                    <span class="search__btn">
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-search"></use>
+                        </svg>
+                    </span>
                 </div>
             </div>
         </footer>
