router two menus

--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,15 @@
                 </div>
             </div>
             <div class="bar page-section wrapper">
-                <div class="bar__search search">
+                <form class="bar__search search">
                     <span class="search__show-all">Все</span>
                     <input type="text" placeholder="Искать" class="search__input">
-                    <span class="search__btn">
+                    <button class="search__btn">
                         <svg class="search__icon">
                             <use xlink:href="img/sprite.svg#icon-search"></use>
                         </svg>
-                    </span>
-                </div>
+                    </button>
+                </form>
                 <div class="search__btn--mobile">
                     <svg class="search__icon">
                         <use xlink:href="img/sprite.svg#icon-menu"></use>
@@ -646,9 +646,9 @@
                 © 2020, Дом обедов, все права защищены
             </p>
             <div class="footer__bottom">
-                <div class="footer__logo logo">
+                <a href="#" class="footer__logo logo">
                     logo
-                </div>
+                </a>
                 <div class="footer__search search">
                     <span class="search__show-all">Все</span>
                     <input type="text" placeholder="Искать" class="search__input">
