--- a/src/index.html
+++ b/src/index.html
@@ -390,11 +390,11 @@
                 <div class="footer__search search">
                     <span class="search__show-all">Все</span>
                     <input type="text" placeholder="Искать" class="search__input">
-                    <span class="search__btn">
+                    <button class="search__btn">
                         <svg class="search__icon">
                             <use xlink:href="img/sprite.svg#icon-search"></use>
                         </svg>
-                    </span>
+                    </button>
                 </div>
             </div>
         </footer>
